rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strnatural.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\\n{result}\")"
---
C♮
Note { pitch: C, accs: [Natural], octave: None, cents: None }
C♮
