rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strnote_g.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:G
Note { pitch: G, accs: [], octave: None, cents: None }
display:G
