rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strnote_lowercase.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:c
Note { pitch: c, accs: [], octave: None, cents: None }
display:c
