rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strnote_lowercase_g.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:g
Note { pitch: g, accs: [], octave: None, cents: None }
display:g
