rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_stroctave_negative.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C-1
Note { pitch: C, accs: [], octave: Some(-1), cents: None }
display:C-1
