rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_stroctave_negative_two_digit.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\\n{result}\")"
---
C-10
Note { pitch: C, accs: [], octave: Some(-10), cents: None }
C-10
