rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_stroctave_two_digit.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C10
Note { pitch: C, accs: [], octave: Some(10), cents: None }
display:C10
