rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_stroctave_zero.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\\n{result}\")"
---
C0
Note { pitch: C, accs: [], octave: Some(0), cents: None }
C0
